Modify text run